fix getPopularFilms method